# ghostty-yazi-flavor

./: README.md  ghostty_yazi_flavor.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/ghostty_yazi_flavor/: __init__.py  cli.py  generator.py  watcher.py
tests/: test_generator.py
