[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostty-yazi-flavor"
dynamic = ["version"]
description = "Generate a yazi flavor from your active Ghostty theme — hover bars and code-preview highlighting that actually match your terminal."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Spencer Presley" }]
requires-python = ">=3.9"
keywords = ["yazi", "ghostty", "theme", "flavor", "terminal"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
]

[project.scripts]
ghostty-yazi-flavor = "ghostty_yazi_flavor.cli:main"

[project.urls]
Homepage = "https://github.com/SpencerPresley/ghostty-yazi-flavor"
Issues = "https://github.com/SpencerPresley/ghostty-yazi-flavor/issues"

[tool.setuptools.dynamic]
version = { attr = "ghostty_yazi_flavor.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
